fixed features alignment

--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ h2{
 	#feature4{
 		display:flex;
 		flex-direction:column;
-		margin-left:20vh;
+		margin-left:10vh;
 		margin-right:20vh;
 	}
 	
